tests/sksl/errors/PrecisionQualifiersDisallowed.glsl
### Compilation failed:

error: 2: precision qualifiers are not allowed
error: 3: precision qualifiers are not allowed
error: 4: precision qualifiers are not allowed
3 errors
